--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
     "chalk": "^5.0.1",
     "commander": "^9.3.0",
     "commander-extras": "^1.1.6",
+    "fkill": "^8.0.1",
     "fuzzy": "^0.1.3",
     "inquirer": "^9.0.0",
     "inquirer-checkbox-plus-prompt": "^1.0.1",
     "micromatch": "^4.0.5",
     "process-exists": "^5.0.0",
     "ps-list": "^8.1.0",
-    "taskkill": "^5.0.0",
     "timestring": "^6.0.0"
   }
 }
