--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "chalk": "^5.0.1",
     "commander": "^9.3.0",
     "commander-extras": "^1.1.6",
+    "execa": "^6.1.0",
     "fkill": "^8.0.1",
     "fuzzy": "^0.1.3",
     "inquirer": "^9.0.0",
     "inquirer-checkbox-plus-prompt": "^1.0.1",
     "micromatch": "^4.0.5",
+    "pid-port": "^0.2.0",
     "process-exists": "^5.0.0",
     "ps-list": "^8.1.0",
     "timestring": "^6.0.0"
